--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Shippori+Mincho&display=swap');
+
 * {
+    font-family: 'Shippori Mincho', serif;
     box-sizing: border-box;
 }
 
@@ -29,8 +32,9 @@ ul>li {
     grid-column: 1;
     grid-row: 1 / 3;
     color: white;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 600;
+    
 }
 
 .header {
