--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,13 @@
 * {
     font-family: 'Shippori Mincho', serif;
     box-sizing: border-box;
+    
 }
 
 .container {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 4fr;
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 5fr;
     height: 100vh;
     
 }
@@ -27,36 +28,102 @@
 
 ul>li {
     padding: 10px;
+    margin-left: 20px;
     
 }
+
+#logo {
+    height: 40px;
+    width: 40px;
+    margin-top: 1em;
+    margin-left: 1em;
+    filter: invert();
+    vertical-align: bottom;
+}
+
+
 
 .icon {
     height: 20px;
     width: 20px;
     filter: invert();
     margin-right: 8px;
-    
+}
 
+.avatar {
+    width: 90px;
+    grid-column: 1;
+    
+    
+}
+
+.searchcon {
+    height: 20px;
+    width: 20px;
+    vertical-align: middle;
+}
+
+.searchbar {
+    border-radius: 8px;
+    border: none;
+    background-color: #a3b3c4;
 }
 
 .sidebar {
-    background-color: #1e5363;
+    background-color: #042f2ed8;
     grid-column: 1;
     grid-row: 1 / 3;
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 600;
     
 }
 
 .header {
-    background-color: greenyellow;
-    grid-column: 2
+    background-color: rgb(255, 255, 255);
+    grid-column: 2;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    margin: 0 8rem 2rem 10rem;
+}
+
+.greeting {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+    align-items: center;
+    font-size: 1.3rem;
+    font-weight: 500;
+   
+}
+
+.greeting > div {
+    grid-column: 2;
+    grid-row: 1;
+    /* display: inline-block; */
+    margin-left: 20px;
+}
+
+button {
+    color: white;
+    background-color: #042f2ec7;
+    border-radius: 20px;
+    padding: 10px;
+    width: 80px;
+    margin-left: 1.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    position: relative;
+    top: 50%;
+    border: none;
+    text-align: center;
+}
+
+.buttons {
+    position: relative;
 }
 
 .main {
-    background-color: aquamarine;
+    background-color: #a3b3c4;
     grid-column: 2 / 3;
 }
 
-<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -4 24 24"><title>home</title><path fill="gray" d="M10,20V14H14V20H19V12H22L12,3L2,12H5V20H10Z" /></svg>
