--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 5fr;
     height: 100vh;
-    
+    background-color: #f2f2f2;
 }
 
 .main-nav {
@@ -50,11 +50,34 @@ ul>li {
     margin-right: 8px;
 }
 
+.bell {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+    margin-left: 1em;
+}
+
+.right-corner {
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3, minmax(20%, 15%));
+    
+}
+
+.small-avatar {
+    height: 50px;
+    display: inline-block;
+    margin-left: 1em;
+}
+
+.name {
+    display: inline-block;
+    margin-left: 1em;
+}
+
 .avatar {
     width: 90px;
     grid-column: 1;
-    
-    
 }
 
 .searchcon {
@@ -80,11 +103,12 @@ ul>li {
 }
 
 .header {
-    background-color: rgb(255, 255, 255);
+    background-color: #f2f2f2;
     grid-column: 2;
     display: grid;
     grid-template-columns: 2fr 1fr;
     margin: 0 8rem 2rem 10rem;
+    
 }
 
 .greeting {
@@ -123,7 +147,35 @@ button {
 }
 
 .main {
-    background-color: #a3b3c4;
+    background-color: #cfd3d8;
     grid-column: 2 / 3;
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    gap: 10px;
 }
 
+article {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 400px);
+    gap: 30px;
+    grid-column: 1;
+}
+
+.announce {
+    grid-column: 2;
+}
+
+.trending {
+    grid-column: 2;
+    
+}
+
+.cards {
+    width: 25ch;
+    padding: 5px;
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    margin-left: 2em;
+    box-shadow:  -8px 0px 0px 0px rgb(252, 104, 50), 2px 2px 4px 0 whitesmoke;
+    
+}
